# mousekeybinds

./: .gitignore  README.md  binds  pyproject.toml
src/mousekeybinds/: binds.py
