[project]
name = "mousekeybinds"
version = "0.1.0"
description = ""
authors = [
    {name = "TheCubeDude"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)",
    "keyboard (>=0.13.5,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin.scripts]
mousekeybinds = { source = "src/mousekeybinds/binds.py", type = "onefile", bundle = false }
